--- a/package.json
+++ b/package.json
@@ -6,17 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "prepare": "husky install",
+    "lint:css": "stylelint --fix **/*.{css,scss,sass}",
+    "lint:es": "eslint src --ext .ts,.tsx --fix",
+    "lint": "npm-run-all lint:*"
   },
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.17.5",
+    "ress": "4.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.31",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-css-modules": "2.11.0",
+    "eslint-plugin-sort-destructure-keys": "1.3.5",
+    "husky": "7.0.4",
+    "lint-staged": "11.2.3",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.4.1",
+    "stylelint": "14.0.0",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-standard": "23.0.0",
+    "stylelint-order": "5.0.0",
     "typescript": "4.4.4"
   }
 }
