--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
     "typescript": "4.4.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --max-warnings 0",
+    "*.css": "stylelint",
+    "*": "prettier --write --ignore-unknown"
   }
 }
